29 Aug 2008 Fix some New Panel data input painting issues - Fish
23 Aug 2008 Implemented sticky and held messages completed - Bernard van der Helm
22 Aug 2008 Fix TOD clock race condition identified by Fred Feucht
            (fredfeucht) - by Marcin Cieslak [saper@system.pl] - Fish
21 Aug 2008 Fix i/o-interrupt-queue race condition - Fish
19 Aug 2008 Init LCS interface ASAP to fix wrong MAC being used - Fish
13 Aug 2008 Fix bad guest IA after host interrupt during branch trace - Greg
04 Aug 2008 DIAG308 function codes (still incomplete) - Roger Bowler
02 Aug 2008 Implement SCP message colors - Bernard van der Helm
29 Jul 2008 Fix buffer mgmt bug in hao_thread causing garbage - Fish
24 Jul 2008 Implementation of cmdtgt version 2 - Bernard van der Helm
20 Jul 2008 Implementation of cmdtgt command - Bernard van der Helm
18 Jul 2008 Fix PSF order 18 suborder 01 PSF and SSD length - Fish
17 Jul 2008 Fix LCS write FCS (Frame Check Sequence) and other bugs - Fish
16 Jul 2008 Increase time-interval accuracy to 1ms for Windows build - Fish
10 Jul 2008 panel support for scrolling up/down one line - Fish
08 Jul 2008 AUTOMOUNT redesign: support +allowed/-disallowed dirs
            and create associated 'automount' panel command - Fish
22 Jun 2008 Fix tape messages print format bug causing crash - Fish
28 May 2008 AUTOMOUNT fixed and enhanced so it actually works now - Fish
28 May 2008 Misleading VTAPE support renamed to AUTOMOUNT instead - Fish
24 May 2008 VTAPE automount support (CCW 0x4B + 0xE4) - Fish
22 May 2008 Attempt to fix my *nix SCSI tape BSR over tapemark bug
            identified by Bob Schneider [bschneider@pingdata.net] - Fish
22 May 2008 Tape file extension neutrality support - Fish
22 May 2008 Flex FakeTape support - Fish
22 May 2008 Fix read timeout bug in LCS logic - Fish
19 May 2008 PSF order 18 suborders (0E,41) and order 1D by Jacob Dekel - Roger Bowler
04 May 2008 Fix CGDR,CGXR to handle values exceeding 2G - Roger Bowler