@@ -4,6 +4,9 @@
 // $Id$
 //
 // $Log$
+// Revision 1.136  2008/08/23 12:34:05  bernard
+// OPTION_MSGHLD sticky messages
+//
 // Revision 1.135  2008/08/04 22:06:00  rbowler
 // DIAG308 function codes for Program-directed re-IPL
 //
@@ -117,7 +120,6 @@
 #define OPTION_TAPE_AUTOMOUNT           /* "Automount" CCWs support  */
 #define OPTION_CMDTGT                   /* the cmdtgt command        */
 #define OPTION_MSGCLR                   /* Paint messages            */
-#define OPTION_MSGHLD                   /* Sticky messages           */
 
 /*********************************************************************\
  *********************************************************************
